--- a/src/index.html
+++ b/src/index.html
@@ -149,7 +149,7 @@
             <a
               href="#"
               class="video"
-              data-video="https://www.youtube.com/embed/HnwsG9a5riA"
+              data-video="https://www.youtube.com/watch?v=dQw4w9WgXcQ"
               data-toggle="modal"
               data-target="#videoModal"
             >
@@ -169,8 +169,8 @@
       <p class="text-center">Mirá nuestras fotos!</p>
       <div class="row mb-4">
         <div class="col-md-4">
-          <a href="http://lorempixel.com/560/560/business/1" data-toggle="lightbox" data-gallery="img-gallery">
-            <img src="http://lorempixel.com/600/600/business/1" class="img-fluid">
+          <a href="https://images.pexels.com/photos/380769/pexels-photo-380769.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=350" data-toggle="lightbox" data-gallery="img-gallery">
+            <img src="https://images.pexels.com/photos/380769/pexels-photo-380769.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=3501" class="img-fluid">
           </a>
         </div>
         <div class="col-md-4">
