Added example images

--- a/src/index.html
+++ b/src/index.html
@@ -169,36 +169,36 @@
       <p class="text-center">Mirá nuestras fotos!</p>
       <div class="row mb-4">
         <div class="col-md-4">
-          <a href="https://images.pexels.com/photos/380769/pexels-photo-380769.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=350" data-toggle="lightbox" data-gallery="img-gallery">
-            <img src="https://images.pexels.com/photos/380769/pexels-photo-380769.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=3501" class="img-fluid">
+          <a href="img/business1.jpg" data-toggle="lightbox" data-gallery="img-gallery">
+            <img src="img/business1.jpg" class="img-fluid">
           </a>
         </div>
         <div class="col-md-4">
-          <a href="http://lorempixel.com/560/560/business/2" data-toggle="lightbox" data-gallery="img-gallery">
-            <img src="http://lorempixel.com/600/600/business/2" class="img-fluid">
+          <a href="img/business2.jpg" data-toggle="lightbox" data-gallery="img-gallery">
+            <img src="img/business2.jpg" class="img-fluid">
           </a>
         </div>
         <div class="col-md-4">
-          <a href="http://lorempixel.com/560/560/business/3" data-toggle="lightbox" data-gallery="img-gallery">
-            <img src="http://lorempixel.com/600/600/business/3" class="img-fluid">
+          <a href="img/business3.jpg" data-toggle="lightbox" data-gallery="img-gallery">
+            <img src="img/business3.jpg" class="img-fluid">
           </a>
         </div>
       </div>
 
       <div class="row mb-4">
         <div class="col-md-4">
-          <a href="http://lorempixel.com/560/560/business/4" data-toggle="lightbox" data-gallery="img-gallery">
-            <img src="http://lorempixel.com/600/600/business/4" class="img-fluid">
+          <a href="img/business4.jpg" data-toggle="lightbox" data-gallery="img-gallery">
+            <img src="img/business4.jpg" class="img-fluid">
           </a>
         </div>
         <div class="col-md-4">
-          <a href="http://lorempixel.com/600/600/business/5" data-toggle="lightbox" data-gallery="img-gallery">
-            <img src="http://lorempixel.com/600/600/business/5" class="img-fluid">
+          <a href="img/business5.jpg" data-toggle="lightbox" data-gallery="img-gallery">
+            <img src="img/business5.jpg" class="img-fluid">
           </a>
         </div>
         <div class="col-md-4">
-          <a href="http://lorempixel.com/560/560/business/6" data-toggle="lightbox" data-gallery="img-gallery">
-            <img src="http://lorempixel.com/600/600/business/6" class="img-fluid">
+          <a href="img/business6.jpg" data-toggle="lightbox" data-gallery="img-gallery">
+            <img src="img/business6.jpg" class="img-fluid">
           </a>
         </div>
       </div>
