--- a/src/index.html
+++ b/src/index.html
@@ -192,8 +192,8 @@
           </a>
         </div>
         <div class="col-md-4">
-          <a href="img/business5.jpg" data-toggle="lightbox" data-gallery="img-gallery">
-            <img src="img/business5.jpg" class="img-fluid">
+          <a href="img/business5.jpeg" data-toggle="lightbox" data-gallery="img-gallery">
+            <img src="img/business5.jpeg" class="img-fluid">
           </a>
         </div>
         <div class="col-md-4">
